--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -77,18 +77,6 @@
   version = {0.2.1},
 }
 
-
-@misc{xbf_spec,
-  url = {
-         https://github.com/XtensibleBinaryFormat/XBF/blob/main/docs/specification.md
-         },
-  author = {David Krauthamer and Dov Kruger},
-  title = {Xtensible Binary Format Specification},
-  year = 2023,
-  month = jul,
-  urldate = {2023-08-06},
-}
-
 @misc{msgpack_spec,
   author = {Sadayuki Furuhashi},
   title = {MessagePack specification},
@@ -103,12 +91,6 @@
   title = {RMP - Rust MessagePack},
   url = {https://github.com/3Hren/msgpack-rust},
   version = {1.1.2},
-}
-
-@misc{protobuf,
-  title = {Protocol Buffers},
-  author = {Google},
-  url = {https://protobuf.dev/},
 }
 
 @misc{sony_stock_data,
@@ -140,7 +122,7 @@
 
 @software{indexmap,
   title = {IndexMap},
-  author = {},
+  author = {bluss},
   url = {https://github.com/bluss/indexmap/tree/master},
   version = {2.0.0},
 }
